--- a/index.html
+++ b/index.html
@@ -1,269 +1,1 @@
-<!DOCTYPE html>
-<html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <title>Affirmation – En Daglig Inspiration</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0;
-            font-family: 'Poppins', sans-serif;
-        }
-
-        body {
-            background: linear-gradient(to bottom, #B3E5FC, #0D47A1);
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            padding: 50px 50px; /* luft top og bund */
-            text-align: center;
-        }
-
-        header {
-            width: 100%;
-        }
-
-        .content {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            margin-top: 30px; /* afstand mellem header og content */
-        }
-
-        .pingvin-container {
-            width: 600px;
-            aspect-ratio: 16 / 9;
-            overflow: hidden;
-            border-radius: 12px;
-            margin-bottom: 5px;
-        }
-
-        .pingvin-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-
-        h1 {
-            font-size: 52px;
-            color: #0D47A1;
-            margin: 0;
-        }
-
-        h2 {
-            font-size: 40px;
-            margin: 10px 0 0 0;
-            color: #1E88E5;
-            font-weight: 400;
-        }
-
-        p, li {
-            font-size: 40px;
-            margin: 20px 0;
-            word-wrap: break-word; /* bryder lange ord */
-        }
-
-        ul {
-            list-style: none;
-            text-align: center;
-            display: inline-block;
-            margin-top: 20px;
-            margin-bottom: 50px;
-            padding-left: 0;
-        }
-
-        button {
-            padding: 14px 30px;
-            font-size: 40px;
-            margin: 15px 0;
-            border: none;
-            border-radius: 8px;
-            background-color: #FFD966;
-            color: #0D47A1;
-            cursor: pointer;
-            font-weight: 600;
-            transition: transform 0.2s, background-color 0.2s;
-        }
-
-        button:hover {
-            transform: scale(1.05);
-            background-color: #FFE58A;
-        }
-
-        .morning {
-            color: #1E88E5;
-            font-weight: 600;
-        }
-
-        .evening {
-            color: #6A1B9A;
-            font-weight: 600;
-        }
-
-        .music-player {
-            position: fixed;
-            top: 20px;
-            left: 20px;
-            z-index: 1000;
-        }
-
-        .music-player button {
-            font-size: 60px;
-            padding: 0;
-            border: none;
-            background: transparent;
-            color: #0D47A1;
-            cursor: pointer;
-            transition: transform 0.2s;
-        }
-
-        .music-player button:hover {
-            transform: scale(1.2);
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Affirmation</h1>
-        <h2>En healende måde at reflektere på</h2>
-    </header>
-
-    <div class="music-player">
-        <button id="musicBtn">🔊</button>
-        <audio id="backgroundMusic" loop>
-            <source src="forest-spirit-meditation-411288.mp3" type="audio/mpeg">
-            Din browser understøtter ikke lydafspilning.
-        </audio>
-    </div>
-
-    <div class="content">
-        <div class="pingvin-container">
-            <img src="billede4.png" alt="Min søde pingvin">
-        </div>
-                
-        <button onclick="showAffirmation()">Vis dagens selvrefleksion</button>
-        <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p>
-        <ul id="todos"></ul>
-    </div>
-
-    <script>
-        const music = document.getElementById("backgroundMusic");
-        const musicBtn = document.getElementById("musicBtn");
-
-        window.addEventListener("load", () => {
-            music.play().catch(() => {
-                musicBtn.textContent = "🔊";
-            });
-            musicBtn.textContent = "🔊";
-        });
-
-        musicBtn.addEventListener("click", () => {
-            if (music.paused) {
-                music.play();
-                musicBtn.textContent = "🔊";
-            } else {
-                music.pause();
-                musicBtn.textContent = "🔇";
-            }
-        });
-
-        document.addEventListener("visibilitychange", () => {
-            if (document.hidden) {
-                music.pause();
-                musicBtn.textContent = "🔇";
-            }
-        });
-
-        const morningAffirmations = [
-            "I dag starter jeg med ro og glæde.",
-            "Jeg vælger at være stærk og positiv.",
-            "Min energi åbner nye muligheder.",
-            "Jeg er fokuseret og klar til dagen.",
-            "Jeg tager ansvar for min egen lykke.",
-            "Jeg møder dagen med et åbent hjerte.",
-            "Jeg tiltrækker gode oplevelser.",
-            "Jeg har tillid til mig selv.",
-            "Jeg er taknemmelig for alt, jeg har.",
-            "Jeg vælger glæde i hvert øjeblik."
-        ];
-
-        const eveningAffirmations = [
-            "Jeg slipper dagen med taknemmelighed.",
-            "Jeg fortjener hvile og fred.",
-            "Jeg sender kærlige tanker til mig selv.",
-            "Jeg reflekterer over dagens gode øjeblikke.",
-            "Jeg tilgiver mig selv og andre.",
-            "Jeg lader bekymringer falde.",
-            "Jeg er stolt af mig selv i dag.",
-            "Jeg fylder mig selv med ro.",
-            "Jeg giver mig selv kærlighed og omsorg.",
-            "Jeg forbereder mig på en god nats søvn."
-        ];
-
-        const morningTodos = [
-            ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil", "Lav et glas vand", "Gentag en positiv sætning"],
-            ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning", "Planlæg dagens vigtigste opgave", "Visualiser succes"],
-            ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand", "Lav taknemmelighedsliste", "Start med musik du elsker"],
-            ["Fokusér på én opgave", "Lav morgenritual", "Visualiser dagens succes", "Send kærlige tanker", "Skriv dagens intention"],
-            ["Skriv hvad der gør dig glad", "Prioriter dagens vigtigste opgave", "Tal venligt til dig selv", "Lav en kort meditation", "Planlæg sjove oplevelser"],
-            ["Start med åbent hjerte", "Send kærlige tanker", "Planlæg glædesøjeblik", "Gentag positiv sætning", "Lav taknemmelighedsliste"],
-            ["Sæt mål om sjove oplevelser", "Vær opmærksom på små glæder", "Lav noget kreativt", "Drik et glas vand", "Visualiser succes"],
-            ["Gentag positiv sætning højt", "Lav en kort meditation", "Vær opmærksom på omgivelserne", "Lav taknemmelighedsliste", "Start dagen med et smil"],
-            ["Lav taknemmelighedsliste", "Hils på en venlig person", "Skriv dagens intention", "Gentag positiv sætning", "Lav en kort meditation"],
-            ["Vælg en glædelig handling", "Del noget positivt", "Start dagen med musik", "Skriv 3 ting du værdsætter", "Lav taknemmelighedsliste"]
-        ];
-
-        const eveningTodos = [
-            ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik", "Læs lidt i en bog", "Lav en kort meditation"],
-            ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning", "Skriv dagens læring", "Planlæg positiv morgen"],
-            ["Skriv kærligt brev til dig selv", "Mediter et par minutter", "Sig noget venligt til dig selv", "Lav taknemmelighedsliste", "Visualiser ro"],
-            ["Reflekter over små sejre", "Skriv dagens læring", "Planlæg positiv morgen", "Lyt til afslappende musik", "Lav vejrtrækning"],
-            ["Lav fred med dagens fejltrin", "Tilgiv dig selv og andre", "Lav afslappende rutine", "Tag et varmt bad", "Lyt til musik"],
-            ["Lad bekymringer falde", "Sluk skærme 30 min før sengetid", "Drik en kop urtete", "Lav en kort meditation", "Skriv 3 ting du værdsætter"],
-            ["Tæl dagens præstationer", "Ros dig selv for små ting", "Lav en kort meditation", "Lyt til musik", "Planlæg en positiv morgen"],
-            ["Fyld dig med ro", "Lyt til afslappende musik", "Lav afslappende vejrtrækning", "Skriv 3 ting du værdsætter", "Lav en kort meditation"],
-            ["Giv dig selv kærlighed og omsorg", "Skriv ned hvad du værdsætter", "Tag et øjeblik i stilhed", "Lav en kort meditation", "Lyt til musik"],
-            ["Forbered dig på god søvn", "Sørg for mørkt og roligt soveområde", "Lav kort afslapningsritual", "Skriv dagens læring", "Lyt til afslappende musik"]
-        ];
-
-        function showAffirmation() {
-            const hour = new Date().getHours();
-            const affirmationElement = document.getElementById("affirmation");
-            let affirmation, todos;
-
-            if (hour < 12) {
-                const idx = Math.floor(Math.random() * morningAffirmations.length);
-                affirmation = morningAffirmations[idx];
-                todos = getRandomTodos(morningTodos[idx]);
-                affirmationElement.textContent = "Morgeninspiration: " + affirmation;
-                affirmationElement.className = "morning";
-            } else {
-                const idx = Math.floor(Math.random() * eveningAffirmations.length);
-                affirmation = eveningAffirmations[idx];
-                todos = getRandomTodos(eveningTodos[idx]);
-                affirmationElement.textContent = "Afteninspiration: " + affirmation;
-                affirmationElement.className = "evening";
-            }
-
-            const ul = document.getElementById("todos");
-            ul.innerHTML = "";
-            todos.forEach(todo => {
-                const li = document.createElement("li");
-                li.textContent = "⭐ " + todo;
-                ul.appendChild(li);
-            });
-        }
-
-        function getRandomTodos(todoArray) {
-            const copy = [...todoArray];
-            copy.sort(() => Math.random() - 0.5);
-            return copy.slice(0, 3);
-        }
-    </script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="da"> <head> <meta charset="UTF-8"> <title>Affirmation – En Daglig Inspiration</title> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> <style> html, body { height: 100%; margin: 0; font-family: 'Poppins', sans-serif; overflow: hidden; /* Forhindrer rulning */ } body { background: linear-gradient(to bottom, #B3E5FC, #0D47A1); color: #333; display: flex; flex-direction: column; align-items: center; text-align: center; } header { width: 100%; margin-top: 40px; /* luft fra toppen */ } .content { flex: 1; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; margin-top: 20px; } .pingvin-container { width: 600px; aspect-ratio: 16 / 9; overflow: hidden; border-radius: 12px; margin-bottom: 20px; } .pingvin-container img { width: 100%; height: 100%; object-fit: contain; } h1 { font-size: 40px; color: #0D47A1; margin: 0 0 5px 0; } h2 { font-size: 28px; margin-bottom: 20px; color: #1E88E5; font-weight: 400; } p#affirmation { font-size: 28px; margin: 10px 0; } ul#todos { list-style: none; text-align: left; /* venstrejusteret for ens stjerner */ padding-left: 0; margin-top: 20px; /* adskiller fra affirmation */ display: flex; flex-direction: column; align-items: flex-start; /* sikrer ⭐️ står lige under hinanden */ } ul#todos li { display: block; margin: 10px 0; /* beholder samme afstand som tekststørrelsen */ font-size: 28px; /* beholder den oprindelige størrelse */ } button { padding: 14px 30px; font-size: 28px; margin: 15px 0; border: none; border-radius: 8px; background-color: #FFD966; color: #0D47A1; cursor: pointer; font-weight: 600; transition: transform 0.2s, background-color 0.2s; } button:hover { transform: scale(1.05); background-color: #FFE58A; } .morning { color: #1E88E5; font-weight: 600; } .evening { color: #6A1B9A; font-weight: 600; } /* Musikknap i venstre hjørne */ .music-player { position: fixed; top: 20px; left: 20px; z-index: 1000; } .music-player button { font-size: 40px; padding: 0; border: none; background: transparent; color: #0D47A1; cursor: pointer; transition: transform 0.2s; } .music-player button:hover { transform: scale(1.2); } /* Blad-animation */ .leaf { position: fixed; top: -50px; font-size: 50px; animation: fall linear infinite; pointer-events: none; } @keyframes fall { 0% { transform: translateY(0) rotate(0deg); opacity:1; } 100% { transform: translateY(100vh) rotate(360deg); opacity:0.5; } } /* Responsivt: mindre tekst på mobil */ @media (max-width: 600px) { h1 { font-size: 28px; } h2 { font-size: 20px; } p#affirmation, ul#todos li, button { font-size: 20px; } .pingvin-container { width: 90%; } } </style> </head> <body> <header> <h1>Affirmation</h1> <h2>En healende måde at reflektere på</h2> </header> <div class="music-player"> <button id="musicBtn">🔊</button> <audio id="backgroundMusic" loop> <source src="forest-spirit-meditation-411288.mp3" type="audio/mpeg"> Din browser understøtter ikke lydafspilning. </audio> </div> <div class="content"> <div class="pingvin-container"> <img src="billede4.png" alt="Min søde pingvin"> </div> <button onclick="showAffirmation()">Vis dagens selvrefleksion</button> <p id="affirmation">Tryk på knappen for at få en inspirerende handling</p> <ul id="todos"></ul> </div> <script> const music = document.getElementById("backgroundMusic"); const musicBtn = document.getElementById("musicBtn"); // Forsøg autoplay window.addEventListener("load", () => { music.play().catch(() => {}); }); musicBtn.addEventListener("click", () => { if (music.paused) { music.play(); musicBtn.textContent = "🔊"; } else { music.pause(); musicBtn.textContent = "🔇"; } }); const morningAffirmations = [ "I dag starter jeg med ro og glæde.", "Jeg vælger at være stærk og positiv.", "Min energi åbner nye muligheder.", "Jeg er fokuseret og klar til dagen.", "Jeg tager ansvar for min egen lykke.", "Jeg møder dagen med et åbent hjerte.", "Jeg tiltrækker gode oplevelser.", "Jeg har tillid til mig selv.", "Jeg er taknemmelig for alt, jeg har.", "Jeg vælger glæde i hvert øjeblik." ]; const eveningAffirmations = [ "Jeg slipper dagen med taknemmelighed.", "Jeg fortjener hvile og fred.", "Jeg sender kærlige tanker til mig selv.", "Jeg reflekterer over dagens gode øjeblikke.", "Jeg tilgiver mig selv og andre.", "Jeg lader bekymringer falde.", "Jeg er stolt af mig selv i dag.", "Jeg fylder mig selv med ro.", "Jeg giver mig selv kærlighed og omsorg.", "Jeg forbereder mig på en god nats søvn." ]; const morningTodos = [ ["Tag dyb vejrtrækning", "Skriv 3 ting du vil opnå", "Start dagen med et smil", "Lav et glas vand", "Gentag en positiv sætning"], ["Lav en positiv liste", "Tag på en kort gåtur", "Gentag en positiv sætning", "Planlæg dagens vigtigste opgave", "Visualiser succes"], ["Prøv en ny aktivitet", "Planlæg en lille succes", "Drik et glas vand", "Lav taknemmelighedsliste", "Start med musik du elsker"], ["Fokusér på én opgave", "Lav morgenritual", "Visualiser dagens succes", "Send kærlige tanker", "Skriv dagens intention"], ["Skriv hvad der gør dig glad", "Prioriter dagens vigtigste opgave", "Tal venligt til dig selv", "Lav en kort meditation", "Planlæg sjove oplevelser"], ["Start med åbent hjerte", "Send kærlige tanker", "Planlæg glædesøjeblik", "Gentag positiv sætning", "Lav taknemmelighedsliste"], ["Sæt mål om sjove oplevelser", "Vær opmærksom på små glæder", "Lav noget kreativt", "Drik et glas vand", "Visualiser succes"], ["Gentag positiv sætning højt", "Lav en kort meditation", "Vær opmærksom på omgivelserne", "Lav taknemmelighedsliste", "Start dagen med et smil"], ["Lav taknemmelighedsliste", "Hils på en venlig person", "Skriv dagens intention", "Gentag positiv sætning", "Lav en kort meditation"], ["Vælg en glædelig handling", "Del noget positivt", "Start dagen med musik", "Skriv 3 ting du værdsætter", "Lav taknemmelighedsliste"] ]; const eveningTodos = [ ["Skriv 3 ting du er taknemmelig for", "Tag et varmt bad", "Lyt til beroligende musik", "Læs lidt i en bog", "Lav en kort meditation"], ["Luk dagen med et smil", "Læs en bog inden sengetid", "Lav vejrtrækning", "Skriv dagens læring", "Planlæg positiv morgen"], ["Skriv kærligt brev til dig selv", "Mediter et par minutter", "Sig noget venligt til dig selv", "Lav taknemmelighedsliste", "Visualiser ro"], ["Reflekter over små sejre", "Skriv dagens læring", "Planlæg positiv morgen", "Lyt til afslappende musik", "Lav vejrtrækning"], ["Lav fred med dagens fejltrin", "Tilgiv dig selv og andre", "Lav afslappende rutine", "Tag et varmt bad", "Lyt til musik"], ["Lad bekymringer falde", "Sluk skærme 30 min før sengetid", "Drik en kop urtete", "Lav en kort meditation", "Skriv 3 ting du værdsætter"], ["Tæl dagens præstationer", "Ros dig selv for små ting", "Lav en kort meditation", "Lyt til musik", "Planlæg en positiv morgen"], ["Fyld dig med ro", "Lyt til afslappende musik", "Lav afslappende vejrtrækning", "Skriv 3 ting du værdsætter", "Lav en kort meditation"], ["Giv dig selv kærlighed og omsorg", "Skriv ned hvad du værdsætter", "Tag et øjeblik i stilhed", "Lav en kort meditation", "Lyt til musik"], ["Forbered dig på god søvn", "Sørg for mørkt og roligt soveområde", "Lav kort afslapningsritual", "Skriv dagens læring", "Lyt til afslappende musik"] ]; function showAffirmation() { // Sørg for musikken kører, hvis den er paused if (music.paused) { music.play().catch(() => {}); musicBtn.textContent = "🔊"; } const hour = new Date().getHours(); const affirmationElement = document.getElementById("affirmation"); let affirmation, todos; if (hour < 12) { const idx = Math.floor(Math.random() * morningAffirmations.length); affirmation = morningAffirmations[idx]; todos = getRandomTodos(morningTodos[idx]); affirmationElement.textContent = "Morgeninspiration: " + affirmation; affirmationElement.className = "morning"; } else { const idx = Math.floor(Math.random() * eveningAffirmations.length); affirmation = eveningAffirmations[idx]; todos = getRandomTodos(eveningTodos[idx]); affirmationElement.textContent = "Afteninspiration: " + affirmation; affirmationElement.className = "evening"; } const ul = document.getElementById("todos"); ul.innerHTML = ""; todos.forEach(todo => { const li = document.createElement("li"); li.textContent = "⭐ " + todo; ul.appendChild(li); }); } function getRandomTodos(todoArray) { const copy = [...todoArray]; copy.sort(() => Math.random() - 0.5); return copy.slice(0, 3); } // Tilføj blade 🍁/🍂 const leaves = ["🍁","🍂"]; for(let i=0;i<6;i++){ const leaf = document.createElement("div"); leaf.className = "leaf"; leaf.style.left = Math.random()*90 + "vw"; leaf.style.animationDuration = (10 + Math.random()*10) + "s"; // langsommere fald leaf.style.fontSize = (40 + Math.random()*30) + "px"; // større blade leaf.textContent = leaves[Math.floor(Math.random()*leaves.length)]; document.body.appendChild(leaf); } </script> </body> </html>
