--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             margin: 10px 0;
         }
 
-       ul#todos {
+ul#todos {
     list-style: none;
     text-align: left;   /* venstrejusteret for ens stjerner */
     padding-left: 0;
-    margin-top: 20px;
+    margin-top: 20px;   /* adskiller fra affirmation */
     display: flex;
     flex-direction: column;
     align-items: flex-start; /* sikrer ⭐️ står lige under hinanden */
@@ -79,10 +79,9 @@
 
 ul#todos li {
     display: block;
-    margin: 5px 0;
+    margin: 10px 0;  /* beholder samme afstand som tekststørrelsen */
+    font-size: 28px; /* beholder den oprindelige størrelse */
 }
-
-
         button {
             padding: 14px 30px;
             font-size: 28px;
